--- a/src/app/components/entrenador/gestion-alumnos/gestion-alumnos.component.html
+++ b/src/app/components/entrenador/gestion-alumnos/gestion-alumnos.component.html
@@ -6,7 +6,7 @@
                 <p class=" fs-2 fw-bold text-white m-0"> gestión de alumnos</p>
             </div>
             <div class="text-center col-12 col-md-4 p-0 m-0">
-                <a class="btn btn-primary btn-lg p-3 fs-5 fw-bold m-0" [routerLink]="['form-alumno']">
+                <a class="btn btn-primary btn-lg p-3 fs-5 fw-bold m-0" (click)="registrarAlumno()">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
                         NUEVO ALUMNO      
                 </a>
@@ -61,8 +61,8 @@
                         <tbody class="text-center">
                             <tr *ngFor="let alumno of mf.data">
                                 <td>
-                                    <button class="btn btn-success" data-bs-toggle="tooltip" data-bs-placement="bottom"
-                                        title="Editar Alumno"><i class="bi bi-pencil"></i>
+                                    <button type="button" (click)="modificarAlumno(alumno)" class="btn btn-success" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                                        title="Editar"><i class="bi bi-pencil"></i>
                                     </button>       
                                 </td>
                                 <td>{{alumno.fecha_inicio | date: 'dd/MM/yyyy'}}</td>
@@ -82,14 +82,30 @@
                                     </button>         
                                 </td>
                                 <td>
-                                    <button class="btn btn-success" data-bs-toggle="tooltip" data-bs-placement="bottom"
-                                        title="" (click)="agregarRutina(alumno)">Actualizada
-                                    </button>       
+                                  
+
+                                    <button *ngIf="verificarFecha(alumno)==false" [disabled]="verificarFecha(alumno)==false" class="btn btn-danger" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                                    title="" (click)="agregarRutina(alumno)">Cuota Pendiente
+                                    </button> 
+                                    
+                                    <button *ngIf="verificarFecha(alumno)==true && verificarRutina(alumno)==true" class="btn btn-success" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                                    title="" (click)="agregarRutina(alumno)">Al dia
+                                    </button>
+                                    
+                                    <button *ngIf="verificarFecha(alumno)==true && verificarRutina(alumno)==false" class="btn btn-danger" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                                    title="" (click)="agregarRutina(alumno)">Actualizar
+                                    </button>
+                                    
+
+
                                 </td>
-                                <td>
-                                    <button class="btn btn-success" data-bs-toggle="tooltip" data-bs-placement="bottom"
-                                        title="">Actualizada
-                                    </button>       
+                                <td class="d-flex justify-content-evenly">
+                                    <button class="btn btn-success fs-5 rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Registrar plan de alimentación" (click)="registrarPlanAlimentacionAlumno(alumno._id)">
+                                        <i class="bi bi-check-all m-0"></i>
+                                    </button>
+                                    <button class="btn btn-dark fs-5 rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ver registros de planes" (click)="verRegistrosPlanAlimentacion(alumno._id)">
+                                        <i class="bi bi-eye"></i>
+                                    </button>     
                                 </td>
                                 <td>
                                     <button *ngIf="alumno.usuario.state == true" class="btn btn-success" data-bs-toggle="tooltip" data-bs-placement="bottom"
