--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -1,8 +1,129 @@
-<footer class="bg-dark py-3 text-center text-muted">
-    <div class="mb-3">
-        <span>Facultad de Ingeniería | Programación y servicios web</span>
+<footer class="page-footer font-small unique-color-dark text-white"  style="background: rgb(10, 12, 15);">
+
+    <div style="background-color: #011125;">
+      <div class="container">
+  
+        <!-- Grid row-->
+        <div class="row py-4 d-flex align-items-center">
+  
+          <!-- Grid column -->
+          <div class="col-md-6 col-lg-5 text-center text-md-start mb-4 mb-md-0">
+            <h6 class="mb-0">¡Conéctese con nosotros en las redes sociales!</h6>
+          </div>
+          <!-- Grid column -->
+  
+          <!-- Grid column -->
+          <div class="col-md-6 col-lg-7 text-center text-md-end">
+  
+            <!-- Facebook -->
+            <a class="me-4">
+                <i title="Facebook" class="bi bi-facebook text-white"></i>
+            </a>
+            <!-- Twitter -->
+            <a class="me-4">
+                <i title="Twitter" class="bi bi-twitter text-white"></i>
+            </a>
+            <!-- Youtube-->
+            <a class="me-4">
+                <i title="Youtube" class="bi bi-youtube text-white"></i>
+            </a>
+            <!--Instagram-->
+            <a class="me-4">
+                <i title="Instagram" class="bi bi-instagram text-white"></i>
+            </a>
+  
+          </div>
+          <!-- Grid column -->
+  
+        </div>
+        <!-- Grid row-->
+  
+      </div>
     </div>
-    <div>
-        <span></span>
+  
+    <!-- Footer Links -->
+    <div class="container text-center mt-5">
+  
+      <!-- Grid row -->
+      <div class="row mt-3">
+  
+        <!-- Grid column -->
+        <div class="col-sm-6 col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+  
+          <!-- Content -->
+          <h6 class="text-uppercase font-weight-bold">conocenos</h6>
+          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; ">
+          <p>Todo el mundo es bienvenido Gym G-X. Nos propusimos
+               crear un club de salud, porque la salud esta antes que el fitness. Nos encanta ayudar a nuestros
+                socios a ser activos.</p>
+  
+        </div>
+        <!-- Grid column -->
+  
+        <!-- Grid column -->
+        <div class="col-sm-6 col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+  
+          <!-- Links -->
+          <h6 class="text-uppercase font-weight-bold">Planes</h6>
+          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+          <p>
+            Pase Básico
+          </p>
+          <p>
+            Pase Full
+          </p>
+          <p>
+            Pase Libre
+          </p>
+  
+        </div>
+        <!-- Grid column -->
+  
+        <!-- Grid column -->
+        <div class="col-sm-6 col-md-3 col-lg-3 col-xl-2 mx-auto mb-4"> 
+  
+          <!-- Links -->
+          <h6 class="text-uppercase font-weight-bold">Ofrecemos</h6>
+          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+          <p>
+            Rutinas personalizadas
+          </p>
+          <p>
+            Plan de alimentación
+          </p>
+          <p>
+            Seguimiento
+          </p>
+  
+        </div>
+        <!-- Grid column -->
+  
+        <!-- Grid column -->
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+  
+          <!-- Links -->
+          <h6 class="text-uppercase font-weight-bold">Contacto</h6>
+          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+          <p>
+            <i class="bi bi-house-fill mx-2"></i> Belgrano N° 605</p>
+          <p>
+            <i class="bi bi-envelope-fill mx-2"></i> gymGX@gmail.com</p>
+          <p>
+            <i class="bi bi-whatsapp text-white mx-2"></i>(0388) 154232843</p>
+  
+        </div>
+        <!-- Grid column -->
+  
+      </div>
+      <!-- Grid row -->
+  
     </div>
-</footer>
+    <!-- Footer Links -->
+  
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright: Gym G-X
+    </div>
+    <!-- Copyright -->
+  
+  </footer>
+
