--- a/src/app/components/dieta/gestion-plan-alimenticion/gestion-plan-alimenticion.component.html
+++ b/src/app/components/dieta/gestion-plan-alimenticion/gestion-plan-alimenticion.component.html
@@ -1,5 +1,5 @@
 <!-- Contenedor principal -->
-<div class="row my-5 min-vh-100 m-0 ">
+<div class="row my-5 min-vh-100 m-0 rounded">
     <div class="col-12 col-sm-10 mx-auto bg-body">
         <div class="row text-uppercase bg-dark py-3 py-sm-5 text-center align-items-center">
             <div class="col-12">
@@ -10,6 +10,7 @@
         <div class="row p-2 p-sm-4 row-cols-1 row-cols-2 bg-light">
             <form class="col-12 p-0">
                 <div class="row mb-3 m-0 ">
+                    <!--
                     <label for="objetivo" class="col-sm-1 col-form-label">Objetivo</label>
                     <div class="col-sm-3 d-flex align-items-center">
                         <select class="form-select form-select-sm" name="objetivo" id="objetivo">
@@ -19,26 +20,46 @@
                             <option value="3">Ganar músculo</option>
                         </select>
                     </div>
+                    -->
+                    <div class="col-sm-4">
+                        <input type="text" name="nombreAlu" class="form-control form-select-sm" placeholder="Buscar por objetivo..." [(ngModel)]="filtersObjetivo">
+                    </div>
+                    <div class="col-sm-1">
+                        <button class="btn btn-primary w-100 btn-sm" (click)="searchPlanAlimentacion()">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="12" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                            </svg>
+                        </button>
+                    </div>
+                    <!--
                     <label for="mes" class="col-sm-1 col-form-label">Mes</label>
+                    -->
                     <div class="col-sm-2 d-flex align-items-center">
-                        <select class="form-select form-select-sm" name="mes" id="mes">
-                            <option selected disabled>Eliga una opción</option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
+                        <select class="form-select form-select-sm" name="mes" id="mes" [(ngModel)]="filtersMes" (ngModelChange)="onMesChange($event)">
+                            <option selected disabled value="">Eliga un mes</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
                         </select>
                     </div>
                     <div class="col-sm-2">
-                        <button class="btn btn-success w-100">
-                            Filtrar&nbsp;
+                        <button class="btn btn-warning w-100 btn-sm" (click)="cleanFiltersPlanALimenticio()">
+                            Limpiar&nbsp;
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-funnel" viewBox="0 0 16 16">
                                 <path d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5v-2zm1 .5v1.308l4.372 4.858A.5.5 0 0 1 7 8.5v5.306l2-.666V8.5a.5.5 0 0 1 .128-.334L13.5 3.308V2h-11z"/>
                             </svg>
                         </button>
                     </div>
-                    <div class="col-sm-3">
-                        <button class="btn btn-primary w-100" (click)="addPlanAlimenticio()">
-                            Nuevo plan&nbsp;
+                    <div class="col-sm-2">
+                        <button class="btn btn-primary w-100 btn-sm" (click)="addPlanAlimenticio()">
+                            Nuevo&nbsp;
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
                                 <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
                               </svg>
@@ -49,11 +70,18 @@
         </div>
 
         <div class="row p-2 p-sm-4 bg-light">
-            <div class="col-12 p-0">
+            <div class="col-12 p-0" *ngIf="planesAlimenticios.length == 0">
+                <div class="py-5 alert alert-danger fs-2 fw-bold fst-italic text-uppercase text-center" role="alert">
+                    No se encontraron coincidencias
+                </div>
+            </div>
+            
+            <div class="col-12 p-0" *ngIf="planesAlimenticios.length > 0">
                 <div class="table-responsive">
                     <table class="table align-middle m-0 bg-white">
                         <thead class="">
                             <tr class="text-center ">
+                                <th scope="col" rowspan="1">Acciones</th>
                                 <th scope="col" rowspan="1">Objetivo</th>
                                 <th scope="col" rowspan="1">Mes</th>
                                 <th scope="col" rowspan="1">Día</th>
@@ -61,11 +89,26 @@
                                 <th scope="col" rowspan="1">Almuerzo</th>
                                 <th scope="col" rowspan="1">Merienda</th>
                                 <th scope="col" rowspan="1">Cena</th>
-                                <th scope="col" rowspan="1">Acciones</th>
                             </tr>
                         </thead>
-                        <tbody class="text-center" *ngFor="let p of planesAlimenticios">
-                            <tr >
+                        <tbody class="text-center border-bottom border-dark" *ngFor="let p of planesAlimenticios">
+                            <tr class="">
+                                <td scope="col" rowspan="8">
+                                    <div class="d-flex justify-content-evenly">
+                                        <button class="btn btn-warning" (click)="editPlan(p)">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="15" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                                <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                                <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                                            </svg>
+                                        </button>
+                                        <button class="btn btn-danger" (click)="deletePlan(p)">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="15" fill="currentColor" class="bi bi-x-square" viewBox="0 0 16 16">
+                                                <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                                                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                                              </svg>
+                                        </button>
+                                    </div> 
+                                </td>
                                 <td scope="col" rowspan="8"> {{p.objetivo}} </td>
                                 <td scope="col" rowspan="8"> {{p.mes}} </td>
                             </tr>
