--- a/src/app/components/entrenador/gestionar-cuota/gestionar-cuota.component.html
+++ b/src/app/components/entrenador/gestionar-cuota/gestionar-cuota.component.html
@@ -88,22 +88,36 @@
                                                     <h5 class="m-auto">Comprobante de pago</h5>
                                                 </div>
                                                 <div class="modal-body">
-                                                    <div  id="ComprobantePago" class="row col-8 m-auto" style="border: 1px solid black; padding-bottom: 60px;">
-                                                        
-                                                        <div class="col-12 mb-3 bg-white m-auto " style=" text-align: left;">
-                                                            <label>FECHA: {{cuotaComprobante.fecha_pago | date:"dd/MM/yyyy" }}</label>
+                                                    <div  id="ComprobantePago" class="row col-8 m-auto" style="border: 1px solid black; padding-bottom: 30px;">
+                                                        <img src="./../../../../assets/img/tituloComprobante.png" alt="">
+                                                        <p style="font-weight: bold;">Comprobante de pago</p>
+                                                        <img src="./../../../../assets/img/linea.png" alt="">
+                                                        <div class="row m-auto justify-content-center">
+                                                            <div class="col-6 bg-white text-center">
+                                                                <label class="col-12"style="font-weight: bold;" >Fecha:</label>
+                                                                <label class="col-12">{{cuotaComprobante.fecha_pago | date:"dd/MM/yyyy" }}</label>
+                                                            </div>
+                                                            <div class="col-6 bg-white text-center">
+                                                                <label class="col-12" style="font-weight: bold;">Hora:</label>
+                                                                <label class="col-12">{{cuotaComprobante.fecha_pago | date:"shortTime" }}</label>
+                                                            </div>
                                                         </div>
-                                                        <div class="col-12 mb-3 bg-white m-auto" style=" text-align: left;">
-                                                            <label>ALUMNO: {{cuotaComprobante.alumno.apellido}}, {{cuotaComprobante.alumno.nombre}}</label>
+                                                        <img src="./../../../../assets/img/linea.png" alt="">
+                                                        <div class="col-11 mb-3 bg-white m-auto" style=" text-align: left;">
+                                                            <label class="col-12 col-sm-4" style="font-weight: bold;">Alumno:</label>
+                                                            <label class="col-12 col-sm-8">{{cuotaComprobante.alumno.apellido}}, {{cuotaComprobante.alumno.nombre}}</label>
                                                         </div>
-                                                        <div class="col-12 mb-3 bg-white m-auto" style=" text-align: left;">
-                                                            <label>PLAN: {{cuotaComprobante.alumno.plan.nombre}}: {{cuotaComprobante.alumno.plan.dias}} dias</label>
+                                                        <div class="col-11 mb-3 bg-white m-auto" style=" text-align: left;">
+                                                            <label class="col-12 col-sm-4" style="font-weight: bold;">Plan:</label>
+                                                            <label class="col-12 col-sm-8">{{cuotaComprobante.alumno.plan.nombre}} ({{cuotaComprobante.alumno.plan.dias}} días)</label>
                                                         </div>
-                                                        <div class="col-12 mb-3 bg-white m-auto" style=" text-align: left;">
-                                                            <label>PRECIO: {{cuotaComprobante.alumno.plan.precio | currency:'$'}}</label>
+                                                        <div class="col-11 mb-3 bg-white m-auto" style=" text-align: left;">
+                                                            <label class="col-12 col-sm-4" style="font-weight: bold;">Precio:</label>
+                                                            <label class="col-12 col-sm-8">{{cuotaComprobante.alumno.plan.precio | currency:'$'}}</label>
                                                         </div>
-                                                        <div class="col-12 mb-3 bg-white m-auto" style=" text-align: left;">
-                                                            <label>MODO DE PAGO: {{cuotaComprobante.modo_pago}}</label>
+                                                        <div class="col-11 mb-3 bg-white m-auto" style=" text-align: left;">
+                                                            <label class="col-12 col-sm-6" style="font-weight: bold;">Modo de pago:</label>
+                                                            <label class="col-12 col-sm-6">{{cuotaComprobante.modo_pago}}</label>
                                                         </div>
                                                         
                                                     </div>
