--- a/src/app/components/form-alumno/form-alumno/form-alumno.component.html
+++ b/src/app/components/form-alumno/form-alumno/form-alumno.component.html
@@ -17,27 +17,32 @@
                 <div class=" p-2 rounded">
                     <form class="" #formAlumno = "ngForm">
                         <div class="form-floating mb-3 ">
-                            <input required type="text" name="apellido" [(ngModel)]="alumno.apellido" #apellido="ngModel" class="form-control " id="apellido" placeholder=""> 
+                            <input required solo-letras type="text" name="apellido" [(ngModel)]="alumno.apellido" #apellido="ngModel" class="form-control " id="apellido" placeholder=""> 
                             <label for="apellido">Apellido</label>
                             <div *ngIf="apellido.invalid && (apellido.touched || apellido.dirty)" class=" m-0 p-0 alert alert-danger align-items-center">
                                 <p  class="mx-4" *ngIf="apellido.errors.required"> Campo requerido</p>
+                                <p  class="mx-4" *ngIf="apellido.errors.soloLetras"> Debe ingresar solo letras</p>
                             </div>
                         </div>
                         <div class="form-floating mb-3">
-                            <input required type="text" name="nombre" [(ngModel)]="alumno.nombre" #nombre="ngModel" class="form-control" id="nombre" placeholder="">
+                            <input required solo-letras type="text" name="nombre" [(ngModel)]="alumno.nombre" #nombre="ngModel" class="form-control" id="nombre" placeholder="">
                             <label for="nombre">Nombre</label>
                             <div *ngIf="nombre.invalid && (nombre.touched || nombre.dirty)" class=" m-0 p-0 alert alert-danger align-items-center">
                                 <p  class="mx-4" *ngIf="nombre.errors.required"> Campo requerido</p>
+                                <p  class="mx-4" *ngIf="nombre.errors.soloLetras"> Debe ingresar solo letras</p>
                             </div>
                         </div>
                         <div class="form-floating mb-3">
-                            <input required type="text" name="dni" [(ngModel)]="alumno.dni" #dni="ngModel" class="form-control" id="dni" placeholder="">
+                            <input required maxlength="8" minlength="6" solo-numeros type="text" name="dni" [(ngModel)]="alumno.dni" #dni="ngModel" class="form-control" id="dni" placeholder="">
                             <label for="dni">DNI</label>
                             <div *ngIf="dni.invalid && (dni.touched || dni.dirty)" class=" m-0 p-0 alert alert-danger align-items-center">
                                 <p  class="mx-4" *ngIf="dni.errors.required"> Campo requerido</p>
+                                <p  class="mx-4" *ngIf="dni.errors.minlength"> Debe ingresar mas de 6 dígitos</p>
+                                <p  class="mx-4" *ngIf="dni.errors.soloNumeros"> Debe ingresar solo números</p>
                             </div>
                         </div>
-                        <div class="row row-cols-1 row-cols-md-2">
+                        
+                        <div *ngIf="accion == 'new'" class="row row-cols-1 row-cols-md-2">
                             <div class=" col form-floating mb-3">
                                 <input required type="date" name="fecha_nacimiento" [(ngModel)]="alumno.fecha_nacimiento" #nacimiento = "ngModel" class="form-control" id="fechaNac" placeholder=""
                                     style="height: 80px">
@@ -47,14 +52,25 @@
                                 </div>
                             </div>
                             <div class="col form-floating mb-3">
-                                <input required type="text" name="celular" [(ngModel)]="alumno.celular" #celular = "ngModel" class="form-control" id="celular" placeholder="">
+                                <input required solo-numeros type="text" name="celular" [(ngModel)]="alumno.celular" #celular = "ngModel" class="form-control" id="celular" placeholder="">
                                 <label for="celular">Celular</label>
                                 <div *ngIf="celular.invalid && (celular.touched || celular.dirty)" class=" m-0 p-0 alert alert-danger align-items-center">
                                     <p  class="mx-4" *ngIf="celular.errors.required"> Campo requerido</p>
+                                    <p  class="mx-4" *ngIf="celular.errors.soloNumeros"> Debe ingresar solo números</p>
                                 </div>
                             </div>
-                            
                         </div>
+
+                        
+                        <div *ngIf="accion == 'update'" class="col form-floating mb-3">
+                            <input required solo-numeros type="text" name="celular" [(ngModel)]="alumno.celular" #celular = "ngModel" class="form-control" id="celular" placeholder="">
+                            <label for="celular">Celular</label>
+                            <div *ngIf="celular.invalid && (celular.touched || celular.dirty)" class=" m-0 p-0 alert alert-danger align-items-center">
+                                <p  class="mx-4" *ngIf="celular.errors.required"> Campo requerido</p>
+                                <p  class="mx-4" *ngIf="celular.errors.soloNumeros"> Debe ingresar solo números</p>
+                            </div>
+                        </div>
+                        
     
                         <div class=" col form-floating mb-3">
                             <input required type="text" name="domicilio" [(ngModel)]="alumno.domicilio" #domicilio = "ngModel" class="form-control" id="domicilio" placeholder="">
@@ -64,10 +80,11 @@
                             </div>
                         </div>
                         <div class=" col form-floating mb-3">
-                            <input required type="text" name="email" [(ngModel)]="alumno.email" #email= "ngModel" class="form-control" id="email" placeholder="">
+                            <input required type="text" email name="email" [(ngModel)]="alumno.email" #email= "ngModel" class="form-control" id="email" placeholder="">
                             <label for="email">Email</label>
                             <div *ngIf="email.invalid && (email.touched || email.dirty)" class=" m-0 p-0 alert alert-danger align-items-center">
                                 <p  class="mx-4" *ngIf="email.errors.required"> Campo requerido</p>
+                                <p  class="mx-4" *ngIf="email.errors.email"> Formato de email incorrecto</p>
                             </div>
                         </div>
     
@@ -82,7 +99,7 @@
                             </div>
                         </div>
                         <div class="col-12 mb-3 pb-0 border-bottom border-4">
-                            <h3 class="text-center  text-white fw-bold my-3">Seccion Usuario</h3>
+                            <h3 class="text-center  text-white fw-bold my-3">Sección Usuario</h3>
                         </div>
                         <div class="form-floating mb-3">
                             <input required type="text" name="username" [(ngModel)]="usuario.username" (ngModelChange)="validarUserName(username)" #username = "ngModel" class="form-control" id="usuario" placeholder="">
@@ -103,12 +120,16 @@
                         </div>
                     </form>
                     <div class="row p-2">
-                        <div class=" col-12 col-md-6 text-center mb-3 ">
-                            <button [disabled]="formAlumno.invalid" class="w-100 btn btn-dark p-3 fs-6  fw-bold" (click)="guardarAlumno(formAlumno)">GUARDAR
-                                ALUMNO</button>
+                        <div *ngIf="accion == 'new'" class=" col-12 col-md-6 text-center mb-3 ">
+                            <button [disabled]="formAlumno.invalid" class="w-100 btn btn-dark p-3 fs-6  fw-bold" 
+                            (click)="guardarAlumno(formAlumno)">GUARDAR</button>
+                        </div>
+                        <div *ngIf="accion == 'update'" class=" col-12 col-md-6 text-center mb-3 ">
+                            <button [disabled]="formAlumno.invalid" class="w-100 btn btn-dark p-3 fs-6  fw-bold" 
+                            (click)="modificarAlumno(formAlumno)">MODIFICAR</button>
                         </div>
                         <div class=" col-12 col-md-6 text-center mb-3">
-                            <button class=" w-100 btn btn-danger p-3 fs-6 fw-bold">CANCELAR</button>
+                            <button (click)="cancelar()" type="button" class=" w-100 btn btn-danger p-3 fs-6 fw-bold">CANCELAR</button>
                         </div>
                       
                     </div>        
