--- a/src/app/components/layout/header/header.component.css
+++ b/src/app/components/layout/header/header.component.css
@@ -2,6 +2,12 @@ header {
     background-color: white;
 }
 
+@media screen and (min-width: 800px){
+	header{
+		height: 300px;
+	}
+}
+
 .navbar {
     background-color: #011125 !important;
     -webkit-box-shadow: 0px 5px 8px 0px rgba(136,136,136,1);
@@ -14,11 +20,9 @@ header {
 }
 
 .header-container {
-    background-image: url('../../../../assets/img/header.jpg');
+    background-image: url('../../../../assets/img/fondo2.jpg');
     background-size: cover;
-	text-align: center;
-	background-position: center center;
-	background-size: cover;
+	background-position: center left;
 	background-repeat: no-repeat;
 	position: relative;
 }
