se agraga graficos

--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -45,7 +45,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a   (click)="verificarPermiso()" [class]="habilitarMenuEntrenador" class="nav-link active" [routerLink]="['']">Estadísticas</a>
+                    <a   (click)="verificarPermiso()" [class]="habilitarMenuEntrenador" class="nav-link active" [routerLink]="['estadisticas']">Estadísticas</a>
                 </li>
 
             </ul>
